
=== 1.10.2 (2018-06-09) ===
CHANGED: upgrade futoin-asyncsteps & futoin-asyncevent
FIXED: exception on rare case of WebSockets connection close in Node.js

=== 1.10.1 (2018-06-09) ===
CHANGED: upgraded to futoin-asyncsteps v2.1 with burst execution feature

=== 1.10.0 (2018-06-06) ===
CHANGED: to use performance-enhanced futoin-asyncsteps v2

=== 1.9.3 (2018-05-25) ===
FIXED: MAC generation to work with null default parameters

=== 1.9.2 (2018-05-23) ===
FIXED: improved browser tests to use dist module
NEW: module exports Errors as alias of legacy FutoInError

=== 1.9.1 (2018-05-23) ===
FIXED: improved CBOR encoding performance by using "cbor" over "borc"
NEW: MAC base calculation

=== 1.9.0 (2018-05-21) ===
NEW: experimental FTN8 Security Concept support

=== 1.8.9 (2018-05-21) ===
FIXED: fatal issue in MAC comparison

=== 1.8.8 (2018-05-20) ===
CHANGED: improved request and response message error reporting verbosity

=== 1.8.7 (2018-05-17) ===
FIXED: missing padding for Base64 in futoin.types spec

=== 1.8.6 (2018-05-15) ===
FIXED: "items" and "regex" cache issue in diamond inheritance
NEW: more detailed SpecTools errors with type validation path

=== 1.8.5 (2018-05-12) ===
FIXED: to properly includes specs/ in package

=== 1.8.4 (2018-05-10) ===
CHANGED: upgraded webpack to v4
FIXED: Browser env WebSockets comm failure without event-emitter

=== 1.8.3 (2018-02-17) ===
CHANGED: Object.prototype is freezed only by SpecTools.secureObjectPrototype()

=== 1.8.2 (2018-02-17) ===
FIXED: CVE-2018-3721 mitigation with Object.freeze()

=== 1.8.1 (2018-01-15) ===
BREAKING CHANGE: bi-channel callbacks require futoin-executor v1.8.0+
FIXED: to correctly handle mix of message codecs in WebSockets

=== 1.8.0 (2018-01-15) ===
BREAKING CHANGE: raw download is Buffer instead of string now
NEW: more verbose spec constraints mismatch
NEW: 'data' type from FTN3 v1.9
NEW: 'BinaryData' type from FTN3 v1.9
NEW: FTN3.1 spec is available under specs/ folder now