@@ -168,6 +168,8 @@ class WSComms {
         this.ws = null;
         $asyncevent( this.evt, [ 'open' ] );
         this._waiting_open = false;
+        this.sniffer = null;
+        Object.seal( this );
     }
 
     init( as, ctx ) {
@@ -330,6 +332,10 @@ class BrowserComms {
     constructor() {
         this.rid = 1;
         this.reqas = {};
+        this.opts = null;
+        this.target = null;
+        this.sniffer = null;
+        Object.seal( this );
     }
 
     init( as, ctx ) {
