@@ -315,6 +315,7 @@ exports.WSComms = class WSComms {
         this.sniffer = null;
         this._waiting_open = false;
         this.ws = null;
+        Object.seal( this );
     }
 
     init( as, ctx ) {
