@@ -12,13 +12,13 @@
     },
     "best": {
         "total": 4.769316346999994,
-        "count": 10076,
+        "count": 10338,
         "avg": 0.0004733342940651046,
         "avg_hz": 2112.67176821643,
         "min": 0.000329144,
         "min_hz": 3038.183895194808,
-        "max": 0.018776015,
-        "max_hz": 53.25943763892391,
+        "max": 0.018024502,
+        "max_hz": 55.48003489916115,
         "bench_time": 4.947987826
     }
 }
