@@ -11,14 +11,14 @@
         "bench_time": 9.722214284
     },
     "best": {
-        "total": 5.095144356000448,
+        "total": 4.979741297001085,
         "count": 309825,
-        "avg": 0.000016445233134835627,
-        "avg_hz": 60807.89440933609,
+        "avg": 0.00001639307668276789,
+        "avg_hz": 61001.361693816885,
         "min": 0.000009125,
         "min_hz": 109589.04109589041,
         "max": 0.019465595,
         "max_hz": 51.37269115072003,
-        "bench_time": 9.722214284
+        "bench_time": 9.539552951
     }
 }
