@@ -11,14 +11,14 @@
         "bench_time": 9.309231545
     },
     "best": {
-        "total": 5.038623928001264,
-        "count": 281232,
-        "avg": 0.000017916253939812198,
-        "avg_hz": 55815.23924361625,
-        "min": 0.000009125,
-        "min_hz": 109589.04109589041,
-        "max": 0.005646781,
-        "max_hz": 177.09204589304952,
-        "bench_time": 9.309231545
+        "total": 4.838551012000328,
+        "count": 281247,
+        "avg": 0.000017837647276549107,
+        "avg_hz": 56061.20496141245,
+        "min": 0.000009123,
+        "min_hz": 109613.06587745258,
+        "max": 0.005565471,
+        "max_hz": 179.6793119576043,
+        "bench_time": 8.93390896
     }
 }
