@@ -11,14 +11,14 @@
         "bench_time": 5.353852263
     },
     "best": {
-        "total": 5.0509778090000115,
+        "total": 4.907129854999994,
         "count": 17208,
-        "avg": 0.0002935249772780109,
-        "avg_hz": 3406.8650963657324,
-        "min": 0.000205553,
-        "min_hz": 4864.925347720539,
-        "max": 0.019485057,
-        "max_hz": 51.32137924975021,
-        "bench_time": 5.353852263
+        "avg": 0.00028648081353260514,
+        "avg_hz": 3490.635158665477,
+        "min": 0.000205401,
+        "min_hz": 4868.525469690995,
+        "max": 0.013973347,
+        "max_hz": 71.56481550196956,
+        "bench_time": 5.217810958
     }
 }
