@@ -12,13 +12,13 @@
     },
     "best": {
         "total": 3.503148473000079,
-        "count": 213560,
-        "avg": 0.000016403579663795088,
-        "avg_hz": 60962.30338108059,
-        "min": 0.000008751,
-        "min_hz": 114272.65455376529,
-        "max": 0.01975061,
-        "max_hz": 50.631347588758025,
+        "count": 302912,
+        "avg": 0.00001638439548779632,
+        "avg_hz": 61033.682978712,
+        "min": 0.000008084,
+        "min_hz": 123701.13805047008,
+        "max": 0.006307355,
+        "max_hz": 158.5450636598067,
         "bench_time": 6.803900842
     }
 }
