@@ -11,14 +11,14 @@
         "bench_time": 4.250994404
     },
     "best": {
-        "total": 4.108192359000003,
+        "total": 3.888447432999986,
         "count": 7954,
-        "avg": 0.000516493884712095,
-        "avg_hz": 1936.1313455965155,
-        "min": 0.000335771,
-        "min_hz": 2978.2202751279888,
-        "max": 0.019000202,
-        "max_hz": 52.631019396530625,
-        "bench_time": 4.250994404
+        "avg": 0.0005102767720010477,
+        "avg_hz": 1959.7207924603451,
+        "min": 0.000331254,
+        "min_hz": 3018.831470714316,
+        "max": 0.003771475,
+        "max_hz": 265.14825101584927,
+        "bench_time": 4.024260281
     }
 }
