@@ -11,14 +11,14 @@
         "bench_time": 9.844610509
     },
     "best": {
-        "total": 5.064832102000452,
+        "total": 4.998126567001637,
         "count": 316905,
         "avg": 0.00001598217794607359,
         "avg_hz": 62569.69502993641,
-        "min": 0.000009125,
-        "min_hz": 109589.04109589041,
+        "min": 0.000009124,
+        "min_hz": 109601.05217010084,
         "max": 0.01427112,
         "max_hz": 70.07158513137021,
-        "bench_time": 9.844610509
+        "bench_time": 9.648273868
     }
 }
