@@ -12,13 +12,13 @@
     },
     "best": {
         "total": 4.946620253999991,
-        "count": 16577,
+        "count": 17099,
         "avg": 0.00029840262134282384,
         "avg_hz": 3351.176995362707,
         "min": 0.000206013,
         "min_hz": 4854.062607699514,
-        "max": 0.020372927,
-        "max_hz": 49.08474859798006,
+        "max": 0.019697907,
+        "max_hz": 50.76681497176324,
         "bench_time": 5.220624438
     }
 }
