@@ -11,14 +11,14 @@
         "bench_time": 9.467552408
     },
     "best": {
-        "total": 4.33094932899967,
+        "total": 3.475006774000506,
         "count": 329463,
-        "avg": 0.000013145480157103133,
-        "avg_hz": 76071.77433223328,
+        "avg": 0.000012754377859179118,
+        "avg_hz": 78404.45147862044,
         "min": 0.000005583,
         "min_hz": 179115.17105498837,
         "max": 0.007528653,
         "max_hz": 132.8258853210528,
-        "bench_time": 9.467552408
+        "bench_time": 7.709289318
     }
 }
