@@ -12,13 +12,13 @@
     },
     "best": {
         "total": 4.776627152001345,
-        "count": 1030318,
-        "avg": 0.000004636070758737929,
-        "avg_hz": 215699.9002043335,
+        "count": 1072089,
+        "avg": 0.000004633947785738442,
+        "avg_hz": 215798.71984695768,
         "min": 0.000004541,
         "min_hz": 220215.81149526534,
-        "max": 0.00202626,
-        "max_hz": 493.5200813321093,
+        "max": 0.002024576,
+        "max_hz": 493.930581020421,
         "bench_time": 19.095798666
     }
 }
